# ImageGraph

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix
.github/workflows/: nix.yml
cmake/: ImageGraphConfig.cmake.in
example/: Building.cpp  CMakeLists.txt  Car.cpp  CarBlur.cpp  Saturn.cpp
include/core/: Definitions.hpp  MemoryDistribution.hpp  NodeGraph.hpp  Optimizer.hpp  Rectangle.hpp  SizedArray.hpp  Tile.hpp
include/core/nodes/: CachedOutputNode.hpp  InputOutNode.hpp  InputOutputNode.hpp  LookUpTable.hpp  MovingTime.hpp  Node.hpp  OptimizedOutNode.hpp  OptimizedOutputNode.hpp  OutNode.hpp  OutputNode.hpp  SinkNode.hpp  TiledInputOutputNode.hpp
include/core/nodes/impl/: ChannelCombinator.hpp  DirectedConvolution.hpp  FileSink.hpp  GaussianBlur.hpp  LUTCombinator.hpp  PerPixel.hpp  PerTwoPixels.hpp  Resize.hpp  SimpleSink.hpp  Vips.hpp
include/core/optimizers/: LUTOptimizer.hpp
include/internal/: Annealer.hpp  BicubicInterpolator.hpp  BorrowedPtr.hpp  Cache.hpp  Clipping.hpp  CompileTime.hpp  Debugging.hpp  GraphAdaptor.hpp  Hashing.hpp  LRUCache.hpp  Mathematics.hpp  MemoryMode.hpp  PCG.hpp  ProtoCache.hpp  ProtoGraphAdaptor.hpp  ProtoTask.hpp  Random.hpp  Task.hpp  ThreadPool.hpp  TileRegion.hpp  Typing.hpp  UniquePtrIterator.hpp
include/internal/generators/: GeneralizedHilbert.hpp  HilbertSpiral.hpp  RelevanceChoice.hpp  Spiral.hpp
include/internal/tilers/: Hilbert.hpp  HilbertSpiral.hpp
include/internal/typing/: NumberConversion.hpp  NumberTraits.hpp  Vips.hpp
src/core/: MemoryDistribution.cpp  NodeGraph.cpp
src/internal/: GraphAdaptor.cpp  ProtoGraphAdaptor.cpp  Task.cpp
test/: CMakeLists.txt  TestBicubicInterpolator.cpp  TestCache.cpp  TestHilbert.cpp  TestInfinityOverlap.cpp  TestPolygonClippingCounts.cpp  VertexOrder.hpp
