foreach(SOURCE_NAME Building Car Saturn CarBlur)
  set(TARGET_NAME "${SOURCE_NAME}Graph")
  add_executable(${TARGET_NAME})
  set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 20)
  target_compile_options(${TARGET_NAME} PRIVATE $<$<CONFIG:RELEASE>:-O3;-march=native>)
  target_compile_options(${TARGET_NAME} PRIVATE $<$<CONFIG:DEBUG>:-Og;-g>)
  target_compile_options(${TARGET_NAME} PRIVATE -Wpedantic -Werror -Wextra -Wno-error=unused-parameter)
  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(${TARGET_NAME} PRIVATE -Wno-error=pass-failed)
  endif()
  target_link_libraries(${TARGET_NAME} ImageGraph)
  target_sources(${TARGET_NAME} PRIVATE "${SOURCE_NAME}.cpp")
endforeach()
