foreach(SOURCE_NAME TestBicubicInterpolator TestCache TestHilbert TestInfinityOverlap TestPolygonClippingCounts)
  add_executable(${SOURCE_NAME})
  set_target_properties(${SOURCE_NAME} PROPERTIES CXX_STANDARD 20)
  target_compile_options(${SOURCE_NAME} PRIVATE -Wpedantic -Werror -Wextra)
  target_compile_options(${SOURCE_NAME} PRIVATE $<$<CONFIG:RELEASE>:-O3;-march=native;-Wno-unused-parameter>)
  target_compile_options(${SOURCE_NAME} PRIVATE $<$<CONFIG:DEBUG>:-Og;-g>)
  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(${SOURCE_NAME} PRIVATE -Wno-error=pass-failed)
  endif()
  target_link_libraries(${SOURCE_NAME} ImageGraph)
  target_sources(${SOURCE_NAME} PRIVATE "${SOURCE_NAME}.cpp")
endforeach()
